Ender 3 Pro Refined.

--- a/picture.htm
+++ b/picture.htm
@@ -79,7 +79,7 @@
     <a href="#fritzing"><img src="img/photos/fritzing.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Fritzing"/></a>
     <a href="#gimp"><img src="img/photos/gimp.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GIMP"/></a>
     <a href="#cnc1610pro"><img src="img/photos/cnc1610pro.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CNC1610 Pro"/></a>
-    <a href="#ender3pro"><img src="img/photos/ender3pro.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Ender 3 Pro印表機"/></a>
+    <a href="#ender3pro"><img src="img/photos/ender3pro.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Ender 3 Pro 3D印表機"/></a>
     <a href="#cr7"><img src="img/photos/cr7.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CR-7 3D印表機"/></a>
     <a href="#mini-kossel"><img src="img/photos/mini-kossel.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Mini Kossel 3D印表機"/></a>
     <a href="#m3d"><img src="img/photos/m3d.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Micro 3D印表機"/></a>
@@ -266,7 +266,7 @@ CNC1610 Pro</h3>
 
 <div id="ender3pro"></div>
 <h3><img src="img/photos/ender3pro.jpg" class="floatLeft"/>
-Ender 3 Pro印表機</h3>
+Ender 3 Pro 3D印表機</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
