--- a/picture/ender3pro/zoffset.htm
+++ b/picture/ender3pro/zoffset.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Ender 3 Pro印表機</h3>
+<h3>Ender 3 Pro 3D印表機</h3>
 <p><b>Z軸調平</b></p>
 <hr size="1">
 <p>
