Sony Xperia X Compact Added uart page.

--- a/phone.htm
+++ b/phone.htm
@@ -88,6 +88,7 @@
     <a href="#titan"><img src="img/photos/titan.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Unihertz Titan"/></a>
     <a href="#pixel3axl"><img src="img/photos/pixel3axl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Google Pixel 3a XL"/></a>
     <a href="#pinephone"><img src="img/photos/pinephone.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PINE64 PinePhone"/></a>
+    <a href="#f5321"><img src="img/photos/f5321.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Sony Xperia X Compact"/></a>
 </p>
 </div>
 
@@ -2372,6 +2373,19 @@ build tow-boot</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/pinephone/arch_install.htm">
     安裝系統</a><br>
+<br><br><br><br>
+
+<div id="f5321"></div>
+<h3><img src="img/photos/f5321.jpg" class="floatLeft"/>
+Sony Xperia X Compact</h3>
+<hr size="1"><br><br><br><br><br>
+&lowast;
+<a href="phone/f5321/review.htm">
+介紹</a><br>
+
+&lowast;
+<a href="phone/f5321/uart.htm">
+UART腳位</a><br>
 <br><br><br><br>
 
 </p>
