Sony Xperia X Compact Added usb pinout image.

--- a/phone.htm
+++ b/phone.htm
@@ -2384,6 +2384,10 @@ Sony Xperia X Compact</h3>
 介紹</a><br>
 
 &lowast;
+<a href="phone/f5321/usb.htm">
+USB腳位</a><br>
+
+&lowast;
 <a href="phone/f5321/uart.htm">
 UART腳位</a><br>
 <br><br><br><br>
