--- a/phone/cosmo/review.htm
+++ b/phone/cosmo/review.htm
@@ -61,7 +61,7 @@
 <tr><th>Internal Camera</th><td>5MP</td></tr>
 <tr><th>External Camera</th><td>24MP</td></tr>
 <tr><th>Slot</th><td>MicroSD</td></tr>
-<tr><th>Keyboard</th><td>QWERTY</td></tr>
+<tr><th>Keyboard</th><td>QWERTY with Backlit</td></tr>
 <tr><th>Port</th><td>USB-TypeC</td></tr>
 <tr><th>Bluetooth</th><td>v5.0</td></tr>
 <tr><th>WLAN</th><td>Wi-Fi 802.11 a/b/g/n/ac</td></tr>
