Astro Slide 5G Added review page.

--- a/phone.htm
+++ b/phone.htm
@@ -75,6 +75,7 @@
 <br><br>
 <p>
     <a href="#n900"><img src="img/photos/n900.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nokia N900"/></a>
+    <a href="#astro"><img src="img/photos/astro.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Astro Slide 5G"/></a>
     <a href="#cosmo"><img src="img/photos/cosmo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Cosmo Communicator"/></a>
     <a href="#gemini-pda"><img src="img/photos/gemini-pda.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Gemini PDA 4G"/></a>
     <a href="#q30"><img src="img/photos/q30.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Blackberry Passport"/></a>
@@ -850,6 +851,16 @@ Mugen Power 3.7V 2400mA電池</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/n900/leste/setup.htm">
     安裝系統</a><br>
+<br><br><br><br>
+
+<div id="astro"></div>
+<h3><img src="img/photos/astro.jpg" class="floatLeft"/>
+Astro Slide 5G</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="phone/astro/review.htm">
+介紹</a><br>
 <br><br><br><br>
 
 <div id="cosmo"></div>
