Wine Refined code.

--- a/program/wine/cpp_dlg_accelerator.htm
+++ b/program/wine/cpp_dlg_accelerator.htm
@@ -54,16 +54,6 @@
 3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
-說明：
-</p>
-<table>
-<tr><th>API</th></tr>
-<tr><td>HACCEL LoadAccelerators(HINSTANCE hInstance, LPCTSTR lpTableName);</td></tr>
-<tr><td>int TranslateAccelerator(HWND hWnd, HACCEL hAccTable, LPMSG lpMsg);</td></tr>
-<tr><td>BOOL TranslateMessage(CONST MSG *lpMsg);</td></tr>
-</table><br>
-
-<p>
 main.c
 </p>
 <pre class="brush:cpp">
@@ -145,7 +135,8 @@ $ winegcc main.c main.res -o main
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_dlg_accelerator/1.jpg" class="maxSize">
+<img style="border:0px" src="cpp_dlg_accelerator/1.jpg" class="maxSize"><br>
+P.S. 按下<b>Ctrl+B</b>就會送出IDA_EXIT命令
 </p>
 
 <p>
