--- a/program/wine/cpp_dlg_dialog.htm
+++ b/program/wine/cpp_dlg_dialog.htm
@@ -54,17 +54,8 @@
 3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
-建立Dialog視窗的方式，除了使用CreateWindow()之外，也可以使用另一個比較簡單的CreateDialog()，此種方式主要依賴於Resource檔案編輯，也就是一般快速建立GUI的工具，主要特點就是拖拉就可以完成GUI設計，而設計完成的Resource檔案(*.rc)必須編譯成res檔案，再透過編譯、連結成執行檔案，而在使用CreateDialog()建立Dialog時，則傳入該Resource檔案的ID即可。<br><br>
+建立Dialog視窗的方式，除了使用CreateWindow()之外，也可以使用另一個比較簡單的CreateDialog()，此種方式主要依賴於Resource檔案編輯，也就是一般快速建立GUI的工具，主要特點就是拖拉就可以完成GUI設計，而設計完成的Resource檔案(*.rc)必須編譯成res檔案，再透過編譯、連結成執行檔案，而在使用CreateDialog()建立Dialog時，則傳入該Resource檔案的ID即可<br><br>
 
-說明：
-</p>
-<table>
-<tr><th>API</th></tr>
-<tr><td>HWND CreateDialog(HINSTANCE hInstance, LPCTSTR lpTemplate, HWND hWndParent, DLGPROC lpDialogFunc);</td></tr>
-<tr><td>LPTSTR MAKEINTRESOURCE(WORD wInteger);</td></tr>
-</table><br>
-
-<p>
 main.c
 </p>
 <pre class="brush:cpp">
