--- a/program/wine/cpp_dlg_dialogbox.htm
+++ b/program/wine/cpp_dlg_dialogbox.htm
@@ -54,17 +54,8 @@
 3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
-DialogBox()是另一種用來建立Dialog的方式，有別於CreateDialog()，DialogBox()是屬於Block方式呼叫，直到Dialog結束後，才會從DialogBox()繼續往下執行，而使用DialogBox()建立的Dialog，必須使用EndDialog()關閉Dialog視窗。<br><br>
+DialogBox()是另一種用來建立Dialog的方式，有別於CreateDialog()，DialogBox()是屬於Block方式呼叫，直到Dialog結束後，才會從DialogBox()繼續往下執行，而使用DialogBox()建立的Dialog，必須使用EndDialog()關閉Dialog視窗<br><br>
 
-說明：
-</p>
-<table>
-<tr><th>API</th></tr>
-<tr><td>BOOL EndDialog(HWND hDlg, int nResult);</td></tr>
-<tr><td>int DialogBox(HINSTANCE hInstance, LPCTSTR lpTemplate, HWND hWndParent, DLGPROC lpDialogFunc);</td></tr>
-</table><br>
-
-<p>
 main.c
 </p>
 <pre class="brush:cpp">
