--- a/program/wine/cpp_dlg_version.htm
+++ b/program/wine/cpp_dlg_version.htm
@@ -54,19 +54,8 @@
 3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
-Windows PE執行檔案可以內嵌Version資訊，在Windows系統下，只要在檔案上方按下滑鼠右鍵，選擇<b>內容</b>即可查看，而這個Version內容就是透過Resource編譯連結。<br><br>
+Windows PE執行檔案可以內嵌Version資訊，在Windows系統下，只要在檔案上方按下滑鼠右鍵，選擇<b>內容</b>即可查看，而這個Version內容就是透過Resource編譯連結<br><br>
 
-說明：
-</p>
-<table>
-<tr><th>API</th></tr>
-<tr><td>DWORD GetModuleFileName(HMODULE hModule, LPTSTR lpFilename, DWORD nSize);</td></tr>
-<tr><td>DWORD GetFileVersionInfoSize(LPTSTR lptstrFilename, LPDWORD lpdwHandle);</td></tr>
-<tr><td>BOOL GetFileVersionInfo(LPTSTR lptstrFilename, DWORD dwHandle, DWORD dwLen, LPVOID lpData);</td></tr>
-<tr><td>BOOL VerQueryValue(const LPVOID pBlock, LPTSTR lpSubBlock, LPVOID *lplpBuffer, PUINT puLen);</td></tr>
-</table><br>
-
-<p>
 main.c
 </p>
 <pre class="brush:cpp">
