F(x)tec Pro1 X Fix box86_wine libfreetype issue.

--- a/phone.htm
+++ b/phone.htm
@@ -2134,6 +2134,10 @@ F(x)tec Pro1 X</h3>
         <a href="phone/pro1x/so_ibus.htm">
         解決IBus選字視窗的位置錯亂問題</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="phone/pro1x/so_wine_libfreetype.htm">
+        解決box86 + wine沒有顯示視窗內容的問題</a><br>
+
 &oplus;
 <b>Ubuntu Touch</b><br>
 
