F(x)tec Pro1 X How to install box86 + wine under lxc environment.

--- a/phone.htm
+++ b/phone.htm
@@ -2115,6 +2115,10 @@ F(x)tec Pro1 X</h3>
         安裝Debian 12</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="phone/pro1x/so_box86.htm">
+        安裝box86/64 + wine</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="phone/pro1x/so_mount.htm">
         mount directory</a><br>
 
