Astro Slide 5G How to root android.

--- a/phone.htm
+++ b/phone.htm
@@ -861,6 +861,13 @@ Astro Slide 5G</h3>
 &lowast;
 <a href="phone/astro/review.htm">
 介紹</a><br>
+
+&oplus;
+<b>Android</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/astro/an_root.htm">
+    Root Android</a><br>
 <br><br><br><br>
 
 <div id="cosmo"></div>
