Astro Slide 5G How to build kernel 4.14.186.

--- a/phone.htm
+++ b/phone.htm
@@ -868,6 +868,10 @@ Astro Slide 5G</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/astro/an_root.htm">
     Root Android</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/astro/an_build_kernel.htm">
+    build kernel 4.14.186</a><br>
 <br><br><br><br>
 
 <div id="cosmo"></div>
