Astro Slide 5G Refined.

--- a/phone/astro/an_build_kernel.htm
+++ b/phone/astro/an_build_kernel.htm
@@ -51,9 +51,9 @@
 <p>
 參考資訊：<br>
 1. <a href="https://www.oesf.org/forum/index.php?topic=36812.30">oesf</a><br>
-2. <a href="https://github.com/PCLineageOS-Ports/android_build_planet_kernel/blob/main/common/scripts/3_copy_kernel.sh">android_build_planet_kernel</a><br><br>
+2. <a href="https://github.com/PCLineageOS-Ports/android_build_planet_kernel/blob/main/common/scripts">android_build_planet_kernel</a><br><br>
 
-步驟如下：
+Debian 10 x64
 </p>
 <pre>
 $ cd
