Wine Refined code.

--- a/program/wine/cpp_setup.htm
+++ b/program/wine/cpp_setup.htm
@@ -55,7 +55,13 @@
 </p>
 <pre>
 $ sudo apt-get install gcc-mingw* wine* -y
+$ wine winecfg
 </pre><br>
+
+<p>
+DPI設定成192<br>
+<img src="cpp_setup/1.jpg" class="maxSize">
+</p>
 
 <p>
 <br><a href="../../program.htm">返回上一頁</a>
