--- a/program/masm32/setup.htm
+++ b/program/masm32/setup.htm
@@ -48,102 +48,38 @@
 <p><b>開發環境</b></p>
 <hr size="1">
 <p>
-司徒很早就接觸MASM32程式，也相當驚訝國外竟然有論壇在維護MASM32 SDK開發工具，司徒記得當初還購買過MASM32的介紹書籍，一窺MASM32的魅力。程式開發工具，如果具備短小精幹的可攜性，應該是許多工程師的最愛，而剛好MASM32具備了這個特點，這也是司徒相當喜歡MASM32的原因，爲此，司徒總是希望自己的教學網站可以有一系列的教學文章，藉此推廣使用MASM32開發程式，只可惜司徒也是一個相當懶惰的人，因此，就這樣一直耽擱著，直到最近，司徒才發現，該是報恩的時候了，因此，這才有了這一系列的MASM32教學文章。<br><br>
-
-基本上，MASM32 SDK是運行在Windows系統上的開發工具，只是，司徒的電腦都是安裝Debian系統，因此，司徒只好用Wine來運行MASM32，基本上是無差別的，所以使用者不用擔心是否會有不一樣的地方，以下是安裝步驟：
+司徒目前是在Pro1 X上撰寫MASM32相關的教學程式，而使用的工具則是box86 + wine，比較特別的是，司徒的手機是安裝Sailfish OS，所以司徒是再安裝LXC(Debian 12 ARM64)，讓MASM32程式跑在這個Container裡面，安裝box64 + wine的步驟如下：
 </p>
 <pre>
-$ sudo apt-get install wine
-$ cd ~/Downloads/
-$ wget http://website.assemblercode.com/masm32/masm32v11r.zip
-$ unzip masm32v11r.zip
-$ wine install.exe
+$ cd
+$ wget https://raw.githubusercontent.com/ThieuMinh26/Proot-Setup/main/Box86-64_Wine86-64.sh
+$ chmod a+x ./Box86-64_Wine86-64.sh
+$ ./Box86-64_Wine86-64.sh
+
+$ WINEPREFIX=~/.wine_amd64 box86 wine winecfg
 </pre><br>
 
 <p>
-點擊Install圖標安裝<br>
-<img src="setup/2.jpg" class="maxSize"><br><br>
-
-選擇安裝位置<br>
-<img src="setup/3.jpg" class="maxSize"><br><br>
-
-下一步<br>
-<img src="setup/4.jpg" class="maxSize"><br><br>
-
-下一步<br>
-<img src="setup/5.jpg" class="maxSize"><br><br>
-
-下一步<br>
-<img src="setup/6.jpg" class="maxSize"><br><br>
-
-下一步<br>
-<img src="setup/7.jpg" class="maxSize"><br><br>
-
-下一步<br>
-<img src="setup/8.jpg" class="maxSize"><br><br>
-
-下一步<br>
-<img src="setup/9.jpg" class="maxSize"><br><br>
-
-下一步<br>
-<img src="setup/10.jpg" class="maxSize"><br><br>
-
-按Y<br>
-<img src="setup/11.jpg" class="maxSize"><br><br>
-
-按任意鍵完成<br>
-<img src="setup/12.jpg" class="maxSize"><br><br>
-
-下一步<br>
-<img src="setup/13.jpg" class="maxSize"><br><br>
-
-下一步<br>
-<img src="setup/14.jpg" class="maxSize"><br><br>
-
-下一步<br>
-<img src="setup/15.jpg" class="maxSize"><br><br>
-
-下一步<br>
-<img src="setup/16.jpg" class="maxSize"><br><br>
-
-完成<br>
-<img src="setup/17.jpg" class="maxSize"><br><br>
-
-接著將<b>C:\masm32\bin</b>加入<b>PATH</b>
-</p>
-
-<pre>
-$ wine regedit
-</pre>
-<p>
-[HKEY_LOCAL_MACHINE\System\CurrentControlSet\Control\Session Manager\Environment]<br>
+DPI設定成144<br>
 <img src="setup/1.jpg" class="maxSize"><br><br>
 
-接著編譯一個範例測試
+接着使用司徒已經解開的MASM32檔案
 </p>
-
 <pre>
-$ cd ~/.wine/drive_c/masm32/examples/exampl01/3dframes/
-$ wine ml /c /coff /Cp 3dframes.asm 
-  Microsoft (R) Macro Assembler Version 6.14.8444
-  Copyright (C) Microsoft Corp 1981-1997.  All rights reserved.
-
-   Assembling: 3dframes.asm
-
-   ***********
-   ASCII build
-   ***********
-
-$ wine link /subsystem:windows 3dframes.obj 
-  Microsoft (R) Incremental Linker Version 5.12.8078
-  Copyright (C) Microsoft Corp 1992-1998. All rights reserved.
-
-$ wine 3dframes.exe
+$ cd
+$ git clone https://github.com/steward-fu/masm32
+$ cp -a masm32/masm32 ~/.wine_amd64/drive_c/
 </pre><br>
 
 <p>
-完成<br>
-<img src="setup/18.jpg" class="maxSize">
+接着測試是否可以正常執行程式
+</p>
+<pre>
+$ WINEPREFIX=~/.wine_amd64 box86 wine ~/.wine_amd64/drive_c/masm32/examples/exampl01/3dframes/3dframes.exe
+</pre>
+<p>
+<img src="setup/2.jpg" class="maxSize"><br>
+P.S. 所有需要的Share Library(*.so and *.dll)都必須成功載入，否者將無法正確執行Windows PE程式
 </p>
 
 <p>
