Astro Slide 5G How to dump boot.img.

--- a/phone.htm
+++ b/phone.htm
@@ -870,6 +870,10 @@ Astro Slide 5G</h3>
     Root Android</a><br>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="phone/astro/an_dump_bootimg.htm">
+    dump boot.img</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="phone/astro/an_build_kernel.htm">
     build kernel 4.14.186</a><br>
 <br><br><br><br>
