Astro Slide 5G Shit screen.

--- a/phone.htm
+++ b/phone.htm
@@ -862,6 +862,10 @@ Astro Slide 5G</h3>
 <a href="phone/astro/review.htm">
 介紹</a><br>
 
+&lowast;
+<a href="phone/astro/fix_screen.htm">
+嘗試解決屏幕問題</a><br>
+
 &oplus;
 <b>Android</b><br>
 
