MASM32 Refined code.

--- a/program.htm
+++ b/program.htm
@@ -600,7 +600,7 @@ MASM32</h3>
 <b>Assembly (x86)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/masm32/x86_hello.htm">
+    <a href="program/masm32/hello.htm">
     Hello, world!</a><br>
 <br><br><br><br>
 
