--- a/program.htm
+++ b/program.htm
@@ -592,12 +592,12 @@ Wine</h3>
 MASM32</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="program/masm32/setup.htm">
-開發環境</a><br>
-
 &oplus;
 <b>Assembly (x86)</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/masm32/setup.htm">
+    開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/masm32/hello.htm">
