MASM32 Refined code.

--- a/program/masm32/hello.htm
+++ b/program/masm32/hello.htm
@@ -90,6 +90,9 @@ all:
     ${MYWINE} ${MASM32}/bin/ml.exe /c /coff /nologo ${TARGET}.asm
     ${MYWINE} ${MASM32}/bin/link.exe /SUBSYSTEM:WINDOWS /MERGE:.rdata=.text ${TARGET}.obj
 
+run:
+    ${MYWINE} ${TARGET}.exe
+
 clean:
     rm -rf ${TARGET}.exe ${TARGET}.obj
 </pre><br>
@@ -99,7 +102,7 @@ clean:
 </p>
 <pre>
 $ make
-$ WINEPREFIX=/home/user/.wine_amd64 box86 wine main.exe
+$ make run
 </pre>
 <p>
 <img src="hello/1.jpg" class="maxSize">
