--- a/program/masm32/hello.htm
+++ b/program/masm32/hello.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="http://win32assembly.programminghorizon.com/tutorials.html">win32assembly</a><br><br>
+1. <a href="https://masm32.com/board/index.php">masm32</a><br><br>
 
 main.asm
 </p>
