MASM32 How to create a window without handling message.

--- a/program/masm32/hello.htm
+++ b/program/masm32/hello.htm
@@ -105,7 +105,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img src="hello/1.jpg" class="maxSize">
+<img style="border:0px" src="hello/1.jpg" class="maxSize">
 </p>
 
 <p>
