--- a/program/masm32/dlg_window.htm
+++ b/program/masm32/dlg_window.htm
@@ -112,7 +112,9 @@ end start
 <b>Line 29</b>：呼叫ExitProcess()讓Process退出並且釋放相關資源<br>
 <b>Line 34</b>：在建立Windows視窗時，需要指定對應的Class，如：Edit、Button，除了可以使用系統預設的Class之外，也可以註冊自定義的Class，上面例子使用的WC_DIALOG，就是系統預設定義的Dialog Class，WS_OVERLAPPEDWINDOW代表視窗有標題、最大化、最小化的按鈕，WS_VISIBLE是建立一個可視化的視窗<br>
 <b>Line 39</b>：從Queue提取Message(包含視窗、系統事件)<br>
-<b>Line 42</b>：分發Message到處理視窗事件的副程式，由於目前的Dialog視窗並沒有對應的處理副程式，因此，無法處理任何Message，包含關閉視窗的Message，所以必須使用kill命令強制關閉該視窗<br><br>
+<b>Line 41</b>：@f(forward)代表會跳到下一個@@位置(Line 44)<br>
+<b>Line 42</b>：分發Message到處理視窗事件的副程式，由於目前的Dialog視窗並沒有對應的處理副程式，因此，無法處理任何Message，包含關閉視窗的Message，所以必須使用kill命令強制關閉該視窗<br>
+<b>Line 43</b>：@b(back)代表會跳到上一個@@位置(Line 38)<br><br>
 
 Makefile
 </p>
