FASM How to prepare development environment.

--- a/program.htm
+++ b/program.htm
@@ -435,6 +435,13 @@ Flat Assembler (FASM)</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/fasm/x86_hello_int80.htm">
         hello, world! (int 0x80)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    GUI<br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/fasm/gui_setup.htm">
+        開發環境</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
