FASM How to program a simple hello.

--- a/program.htm
+++ b/program.htm
@@ -442,6 +442,11 @@ Flat Assembler (FASM)</h3>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/fasm/gui_setup.htm">
         開發環境</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/fasm/gui_hello.htm">
+        hello, world!</a><br>
+
 <br><br><br><br>
 
 <div id="hla"></div>
