--- a/program.htm
+++ b/program.htm
@@ -455,15 +455,18 @@ High Level Assembly (HLA)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &oplus;
-<b>Assembly (x64)</b><br>
+<b>Assembly (x86)</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/hla/x64_setup.htm">
-    開發環境</a><br>
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    Console<br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/hla/x64_hello.htm">
-    hello, world!</a><br>
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/x86_setup.htm">
+        開發環境</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/x86_hello.htm">
+        hello, world!</a><br>
 
 &lowast;
 <a href="program/hla/fix_flex.htm">
