--- a/program/hla/x86_hello.htm
+++ b/program/hla/x86_hello.htm
@@ -29,7 +29,7 @@
   <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
   
   <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
+  <script type="text/javascript" src="../../scripts/shBrushAsm.js"></script>
 
   <!-- Conditional comment to apply opacity fix for IE #content background.
        Invalid CSS, but can be removed without harming design -->
@@ -44,20 +44,37 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>High Level Assembly (HLA) &gt;&gt; Assembly (x64)</h3>
-<p><b>安装環境</b></p>
+<h3>High Level Assembly (HLA) &gt;&gt; Assembly (x86) &gt;&gt; Console</h3>
+<p><b>hello, world!</b></p>
 <hr size="1">
 <p>
-參考網站：<br>
-1. <a href="https://www.plantation-productions.com/Webster/HighLevelAsm/LInuxDownload.html">HighLevelAsm</a><br><br>
+參考資料：<br>
+1. <a href="https://www.plantation-productions.com/Webster/">webster</a><br><br>
 
-步驟如下：
+main.hla
+</p>
+<pre class="brush:asm">
+program main;
+
+    #include("stdlib.hhf")
+
+begin main;
+
+    stdout.put("hello, world!");
+
+end main;
+</pre><br>
+
+<p>
+編譯、執行
 </p>
 <pre>
-$ cd
-$ wget https://www.plantation-productions.com/Webster/HighLevelAsm/HLAv2.16/linux64.hla.tar.gz
-$ tar xvf linux64.hla.tar.gz
-$ sudo mv usr/hla /opt/
+$ export PATH=$PATH:/opt/hla/
+$ export hlalib=/opt/hla/hlalib/
+$ export hlainc=/opt/hla/include/
+$ hla main
+$ ./main
+    hello, world!
 </pre><br>
 
 <p>
