--- a/program/hla/x86_setup.htm
+++ b/program/hla/x86_setup.htm
@@ -29,7 +29,7 @@
   <link rel="stylesheet" type="text/css" href="../../css/print.css" media="print" />
   
   <script type="text/javascript" src="../../scripts/shCore.js"></script>
-  <script type="text/javascript" src="../../scripts/shBrushAsm.js"></script>
+  <script type="text/javascript" src="../../scripts/shBrushCpp.js"></script>
 
   <!-- Conditional comment to apply opacity fix for IE #content background.
        Invalid CSS, but can be removed without harming design -->
@@ -44,31 +44,28 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>High Level Assembly (HLA) &gt;&gt; Assembly (x64)</h3>
-<p><b>hello, world!</b></p>
+<h3>High Level Assembly (HLA) &gt;&gt; Assembly (x86) &gt;&gt; Console</h3>
+<p><b>安装環境</b></p>
 <hr size="1">
 <p>
-main.hla
-</p>
-<pre class="brush:asm">
-program hello;
-  #include("stdlib.hhf")
+參考網站：<br>
+1. <a href="https://www.plantation-productions.com/Webster/HighLevelAsm/LInuxDownload.html">HighLevelAsm</a><br><br>
 
-begin hello;
-  stdout.put("hello, world!");
-end hello;
-</pre><br>
-
-<p>
-編譯、執行
+步驟如下：
 </p>
 <pre>
-$ export PATH=$PATH:/opt/hla/
-$ export hlalib=/opt/hla/hlalib/
-$ export hlainc=/opt/hla/include/
-$ hla main
-$ ./main
-  hello, world!
+$ cd
+$ wget https://www.plantation-productions.com/Webster/HighLevelAsm/HLAv2.16/linux.hla.tar.gz
+$ tar xvf linux.hla.tar.gz
+$ sudo mv usr/hla /opt/
+$ /opt/hla/hla
+    Usage: hla options filename(s)
+
+    HLA (High Level Assembler - HLABE back end, LD linker)
+    Version 2.16 build 4409 (prototype)
+
+      -?        Display help message.
+      -license  Display license information.
 </pre><br>
 
 <p>
