--- a/program/fasm/win32_hello.htm
+++ b/program/fasm/win32_hello.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>FASM &gt;&gt; Assembly (x86) &gt;&gt; GUI</h3>
+<h3>FASM &gt;&gt; Assembly (x86) &gt;&gt; Win32 API</h3>
 <p><b>Hello, world!</b></p>
 <hr size="1">
 <p>
@@ -91,7 +91,7 @@ $ make
 $ make run
 </pre>
 <p>
-<img style="border:0px" src="gui_hello/1.jpg" class="maxSize">
+<img style="border:0px" src="win32_hello/1.jpg" class="maxSize">
 </p>
 
 <p>
