--- a/program/fasm/win32_setup.htm
+++ b/program/fasm/win32_setup.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>FASM &gt;&gt; Assembly (x86) &gt;&gt; GUI</h3>
+<h3>FASM &gt;&gt; Assembly (x86) &gt;&gt; Win32 API</h3>
 <p><b>開發環境</b></p>
 <hr size="1">
 <p>
@@ -61,7 +61,7 @@ $ WINEPREFIX=~/.wine_amd64 box86 wine winecfg
 
 <p>
 DPI設定成144<br>
-<img src="gui_setup/1.jpg" class="maxSize"><br><br>
+<img src="win32_setup/1.jpg" class="maxSize"><br><br>
 
 接着使用司徒已經解開的FASM檔案
 </p>
@@ -78,7 +78,7 @@ $ cp -a win32/fasm ~/.wine_amd64/drive_c/
 $ WINEPREFIX=~/.wine_amd64 box86 wine ~/.wine_amd64/drive_c/fasm/fasmw.exe
 </pre>
 <p>
-<img src="gui_setup/2.jpg" class="maxSize"><br>
+<img src="win32_setup/2.jpg" class="maxSize"><br>
 P.S. 所有需要的Share Library(*.so and *.dll)都必須成功載入，否者將無法正確執行Windows PE程式
 </p>
 
