--- a/program/fasm/arm_hello_swi_oabi.htm
+++ b/program/fasm/arm_hello_swi_oabi.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Flat Assembler (FASM) &gt;&gt; Assembly (ARM) &gt;&gt; Console</h3>
+<h3>Flat Assembler (FASM) &gt;&gt; Assembly (ARM)</h3>
 <p><b>hello, world! (swi, oabi)</b></p>
 <hr size="1">
 <p>
