--- a/program/fasm/x86_hello_int80.htm
+++ b/program/fasm/x86_hello_int80.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Flat Assembler (FASM) &gt;&gt; Assembly (x86) &gt;&gt; Console</h3>
+<h3>Flat Assembler (FASM) &gt;&gt; Assembly (x86)</h3>
 <p><b>hello, world! (int 0x80)</b></p>
 <hr size="1">
 <p>
