--- a/program.htm
+++ b/program.htm
@@ -451,16 +451,13 @@ High Level Assembly (HLA)</h3>
 &oplus;
 <b>Assembly (x86)</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Console<br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/hla/x86_setup.htm">
+    開發環境</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/hla/x86_setup.htm">
-        開發環境</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/hla/x86_hello.htm">
-        hello, world!</a><br>
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/hla/x86_hello.htm">
+    hello, world!</a><br>
 
 &lowast;
 <a href="program/hla/fix_flex.htm">
