--- a/program/hla/x86_setup.htm
+++ b/program/hla/x86_setup.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>High Level Assembly (HLA) &gt;&gt; Assembly (x86) &gt;&gt; Console</h3>
+<h3>High Level Assembly (HLA) &gt;&gt; Assembly (x86)</h3>
 <p><b>安装環境</b></p>
 <hr size="1">
 <p>
