--- a/program.htm
+++ b/program.htm
@@ -459,6 +459,13 @@ High Level Assembly (HLA)</h3>
     <a href="program/hla/x86_hello.htm">
     hello, world!</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&oplus;
+    Win32 API<br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/win32_setup.htm">
+        開發環境</a><br>
+
 &lowast;
 <a href="program/hla/fix_flex.htm">
 解決"flex: input rules are too complicated (>= 32000 NFA states)"問題</a><br>
