--- a/program/hla/win32_setup.htm
+++ b/program/hla/win32_setup.htm
@@ -61,7 +61,7 @@ $ WINEPREFIX=~/.wine_amd64 box86 wine winecfg
 
 <p>
 DPI設定成144<br>
-<img src="win32_setup/1.jpg" class="maxSize"><br><br>
+<img style="border:0px" src="win32_setup/1.jpg" class="maxSize"><br><br>
 
 接着使用司徒已經解開的HLA檔案
 </p>
@@ -78,7 +78,7 @@ $ cp -a win32/hla ~/.wine_amd64/drive_c/
 $ WINEPREFIX=~/.wine_amd64 box86 wine regedit
 </pre>
 <p>
-<img src="win32_setup/2.jpg" class="maxSize"><br><br>
+<img style="border:0px" src="win32_setup/2.jpg" class="maxSize"><br><br>
 
 接着測試是否可以正常執行程式
 </p>
@@ -86,7 +86,7 @@ $ WINEPREFIX=~/.wine_amd64 box86 wine regedit
 $ WINEPREFIX=~/.wine_amd64 box86 wine ~/.wine_amd64/drive_c/hla/examples/Win32/icz/msgbox.exe
 </pre>
 <p>
-<img src="win32_setup/3.jpg" class="maxSize"><br>
+<img style="border:0px" src="win32_setup/3.jpg" class="maxSize"><br>
 P.S. 所有需要的Share Library(*.so and *.dll)都必須成功載入，否者將無法正確執行Windows PE程式
 </p>
 
