--- a/program.htm
+++ b/program.htm
@@ -466,6 +466,10 @@ High Level Assembly (HLA)</h3>
         <a href="program/hla/win32_setup.htm">
         開發環境</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/hla/win32_hello.htm">
+        Hello, world!</a><br>
+
 &lowast;
 <a href="program/hla/fix_flex.htm">
 解決"flex: input rules are too complicated (>= 32000 NFA states)"問題</a><br>
