--- a/program/fasm/win32_setup.htm
+++ b/program/fasm/win32_setup.htm
@@ -48,6 +48,9 @@
 <p><b>開發環境</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://flatassembler.net/download.php">fasm</a><br><br>
+
 司徒目前是在Pro1 X上撰寫FASM相關的教學程式，而使用的工具則是box86 + wine，比較特別的是，司徒的手機是安裝Sailfish OS，所以司徒是再安裝LXC(Debian 12 ARM64)，讓FASM程式跑在這個Container裡面，安裝box64 + wine的步驟如下：
 </p>
 <pre>
