--- a/program/masm32/setup.htm
+++ b/program/masm32/setup.htm
@@ -48,6 +48,9 @@
 <p><b>開發環境</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://www.masm32.com/">masm32</a><br><br>
+
 司徒目前是在Pro1 X上撰寫MASM32相關的教學程式，而使用的工具則是box86 + wine，比較特別的是，司徒的手機是安裝Sailfish OS，所以司徒是再安裝LXC(Debian 12 ARM64)，讓MASM32程式跑在這個Container裡面，安裝box64 + wine的步驟如下：
 </p>
 <pre>
