CNC1610 Pro How to reduce noiseby by using mat.

--- a/picture.htm
+++ b/picture.htm
@@ -252,6 +252,10 @@ CNC1610 Pro</h3>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="picture/cnc1610pro/mat.htm">
+靜音墊</a><br>
+
+&lowast;
 <a href="picture/cnc1610pro/wall.htm">
 自製擋板</a><br>
 
