F(x)tec Pro1 X Protection cases for Pro1 X.

--- a/phone.htm
+++ b/phone.htm
@@ -1990,6 +1990,10 @@ F(x)tec Pro1 X</h3>
 介紹</a><br>
 
 &lowast;
+<a href="phone/pro1x/case.htm">
+手機殼</a><br>
+
+&lowast;
 <a href="phone/pro1x/backup.htm">
 如何透過edl備份</a><br>
 
