F(x)tec Pro1 X Protection cases for Pro1 X.

--- a/phone/pro1x/case.htm
+++ b/phone/pro1x/case.htm
@@ -54,7 +54,7 @@
 2. <a href="https://eskerahn.dk/?p=3620">eskerahn</a><br>
 3. <a href="https://nyanonon.hatenablog.com/entry/20211206/1638770570">hatenablog</a><br><br>
 
-司徒使用手機的習慣是不貼保護膜也不使用保護殼，而會幫Pro1 X找手機殼的主要原因在於，Pro1 X手機底座太薄，而司徒的手比較大一點，因此，打字手感就差了一點<br>
+司徒使用手機的習慣是不貼保護膜也不使用保護殼，而會幫Pro1 X找手機殼的主要原因是要讓打字手感更好<br>
 <img src="case/10.jpg" class="maxSize"><br>
 <img src="case/1.jpg" class="maxSize"><br><br>
 
