--- a/phone/pro1x/case.htm
+++ b/phone/pro1x/case.htm
@@ -51,14 +51,16 @@
 <p>
 參考資訊：<br>
 1. <a href="https://www.thingiverse.com/thing:4617029">3d case</a><br>
-2. <a href="https://eskerahn.dk/?p=3620">eskerahn</a><br>
-3. <a href="https://nyanonon.hatenablog.com/entry/20211206/1638770570">hatenablog</a><br><br>
+2. <a href="https://www.printables.com/model/267403-fxtec-pro1x-case/files">3d case</a><br>
+3. <a href="https://eskerahn.dk/?p=3620">eskerahn</a><br>
+4. <a href="https://nyanonon.hatenablog.com/entry/20211206/1638770570">hatenablog</a><br><br>
 
 司徒使用手機的習慣是不貼保護膜也不使用保護殼，而會幫Pro1 X找手機殼的主要原因是要讓打字手感更好<br>
 <img src="case/10.jpg" class="maxSize"><br>
 <img src="case/1.jpg" class="maxSize"><br><br>
 
 目前市面上並沒有符合Pro1 X使用的手機殼，不過，倒是有熱心的網友製作Pro1的外殼<br>
+<img src="case/19.jpg" class="maxSize"><br>
 <img src="case/18.jpg" class="maxSize"><br><br>
 
 司徒上網找了一下，發現有網友推薦使用Huawei P20 Pro手機殼，據說是最適合Pro1 X使用的手機殼，不過，需要注意的是，規格是<b>無邊框</b>手機殼<br>
