MASM32 How to handle event.

--- a/program.htm
+++ b/program.htm
@@ -390,6 +390,9 @@ MASM32</h3>
         <a href="program/masm32/dlg_window.htm">
         Window</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/masm32/dlg_event.htm">
+        Event</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
