F(x)tec Pro1 X Added more images.

--- a/phone/pro1x/case.htm
+++ b/phone/pro1x/case.htm
@@ -50,20 +50,45 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://www.thingiverse.com/thing:4617029">3d case</a><br>
-2. <a href="https://www.printables.com/model/267403-fxtec-pro1x-case/files">3d case</a><br>
+1. <a href="https://www.thingiverse.com/thing:4617029">3d case1</a><br>
+2. <a href="https://www.printables.com/model/267403-fxtec-pro1x-case/files">3d case2</a><br>
 3. <a href="https://eskerahn.dk/?p=3620">eskerahn</a><br>
 4. <a href="https://nyanonon.hatenablog.com/entry/20211206/1638770570">hatenablog</a><br><br>
 
-司徒使用手機的習慣是不貼保護膜也不使用保護殼，而會幫Pro1 X找手機殼的主要原因是要讓打字手感更好<br>
-<img src="case/10.jpg" class="maxSize"><br>
+司徒使用手機的習慣是不貼保護膜也不使用保護殼，而要幫Pro1 X找手機殼的主要原因，其實是為了讓打字手感更好<br>
+<img src="case/10.jpg" class="maxSize"><br><br>
+
+底座薄了一點<br>
 <img src="case/1.jpg" class="maxSize"><br><br>
 
-目前市面上並沒有符合Pro1 X使用的手機殼，不過，倒是有熱心的網友製作Pro1的外殼<br>
-<img src="case/19.jpg" class="maxSize"><br>
+目前市面上並沒有Pro1 X的手機殼，不過，倒是有熱心的網友製作Pro1的外殼<br>
 <img src="case/18.jpg" class="maxSize"><br><br>
 
-司徒上網找了一下，發現有網友推薦使用Huawei P20 Pro手機殼，據說是最適合Pro1 X使用的手機殼，不過，需要注意的是，規格是<b>無邊框</b>手機殼<br>
+使用3D印表機列印<br>
+<img src="case/21.jpg" class="maxSize"><br>
+<img src="case/23.jpg" class="maxSize"><br><br>
+
+印出來的殼小了一點<br>
+<img src="case/24.jpg" class="maxSize"><br>
+<img src="case/25.jpg" class="maxSize"><br>
+<img src="case/26.jpg" class="maxSize"><br>
+<img src="case/27.jpg" class="maxSize"><br>
+<img src="case/28.jpg" class="maxSize"><br><br>
+
+另一個3D外殼<br>
+<img src="case/19.jpg" class="maxSize"><br>
+<img src="case/22.jpg" class="maxSize"><br>
+<img src="case/29.jpg" class="maxSize"><br><br>
+
+竟然完美結合，這個3D外殼相當適合拿去給廠商列印<br>
+<img src="case/30.jpg" class="maxSize"><br>
+<img src="case/31.jpg" class="maxSize"><br>
+<img src="case/32.jpg" class="maxSize"><br>
+<img src="case/33.jpg" class="maxSize"><br>
+<img src="case/34.jpg" class="maxSize"><br>
+<img src="case/35.jpg" class="maxSize"><br><br>
+
+網友推薦使用Huawei P20 Pro手機殼，據說是最適合Pro1 X使用的手機殼，不過，需要注意的是，規格是<b>無邊框</b>手機殼<br>
 <img src="case/2.jpg" class="maxSize"><br><br>
 
 安裝後，看來還蠻符合的，這個手機殼的底面是使用硬殼材料，側邊則是軟殼材料<br>
@@ -87,6 +112,9 @@ USB Type-C沒有對齊<br>
 最大缺點是邊框容易脫落，沒有很吻合的咬住Pro1 X<br>
 <img src="case/9.jpg" class="maxSize"><br><br>
 
+切割USB Type-C後的保護殼，可以看出Huawei P20 Pro手機殼還是有點小<br>
+<img src="case/20.jpg" class="maxSize"><br><br>
+
 基於某種緣份下，手機店老闆娘推薦司徒使用iPhone的手機殼試試，這個手機殼的底面材料是硬殼，側邊則是軟殼材料，不過司徒忘記這個到底是哪款iPhone Max型號～<br>
 <img src="case/11.jpg" class="maxSize"><br><br>
 
@@ -106,7 +134,22 @@ USB Type-C沒有對齊<br>
 <img src="case/16.jpg" class="maxSize"><br><br>
 
 唯一的優點就是相當適合司徒的手～<br>
-<img src="case/17.jpg" class="maxSize">
+<img src="case/17.jpg" class="maxSize"><br><br>
+
+這個保護殼是目前手感最好的一個，於是，司徒再度使用美工刀裁切，裁切這邊的原因是要幫助屏幕順利推出，司徒習慣使用雙手推出螢幕<br>
+<img src="case/36.jpg" class="maxSize"><br><br>
+
+底部裁切，這樣就可以使用USB Type-C充電<br>
+<img src="case/37.jpg" class="maxSize"><br><br>
+
+裁切後的電源鍵位置<br>
+<img src="case/38.jpg" class="maxSize"><br><br>
+
+耳機孔用不到，所以沒有裁切<br>
+<img src="case/39.jpg" class="maxSize"><br><br>
+
+裁切相機孔位置，讓底部更貼合<br>
+<img src="case/40.jpg" class="maxSize">
 </p>
 
 <p>
