HLA Fix the WC_DIALOG definition issue.

--- a/program.htm
+++ b/program.htm
@@ -423,6 +423,10 @@ High Level Assembly (HLA)</h3>
         Hello, world!</a><br>
 
 &lowast;
+<a href="program/hla/fix_wc_dialog.htm">
+解決w.WC_DIALOG定義錯誤問題</a><br>
+
+&lowast;
 <a href="program/hla/fix_flex.htm">
 解決"flex: input rules are too complicated (>= 32000 NFA states)"問題</a><br>
 <br><br><br><br>
