HLA How to program dialog window.

--- a/program.htm
+++ b/program.htm
@@ -422,6 +422,13 @@ High Level Assembly (HLA)</h3>
         <a href="program/hla/win32_hello.htm">
         Hello, world!</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
+        Dialog<br>
+
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+            <a href="program/hla/win32_dlg_window.htm">
+            Window</a><br>
+
 &lowast;
 <a href="program/hla/fix_wc_dialog.htm">
 解決w.WC_DIALOG定義錯誤問題</a><br>
