MASM32 Refined code.

--- a/program.htm
+++ b/program.htm
@@ -372,27 +372,24 @@ int 0x80、sysenter、syscall</a><br>
 MASM32</h3>
 <hr size="1"><br><br><br><br><br>
 
+&lowast;
+<a href="program/masm32/setup.htm">
+開發環境</a><br>
+
+&lowast;
+<a href="program/masm32/hello.htm">
+Hello, world!</a><br>
+
 &oplus;
-<b>Assembly (x86)</b><br>
+Dialog<br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/masm32/setup.htm">
-    開發環境</a><br>
+    <a href="program/masm32/dlg_window.htm">
+    Create Window</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="program/masm32/hello.htm">
-    Hello, world!</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Dialog<br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/masm32/dlg_window.htm">
-        Window</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="program/masm32/dlg_event.htm">
-        Event</a><br>
+    <a href="program/masm32/dlg_event.htm">
+    Handle Event</a><br>
 <br><br><br><br>
 
 <div id="hla"></div>
