--- a/program/masm32/dlg_event.htm
+++ b/program/masm32/dlg_event.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>MASM32 &gt;&gt; Assembly (x86) &gt;&gt; Dialog</h3>
+<h3>MASM32 &gt;&gt; Dialog</h3>
 <p><b>Event</b></p>
 <hr size="1">
 <p>
