--- a/program/masm32/setup.htm
+++ b/program/masm32/setup.htm
@@ -59,7 +59,7 @@ $ wget https://raw.githubusercontent.com/ThieuMinh26/Proot-Setup/main/Box86-64_W
 $ chmod a+x ./Box86-64_Wine86-64.sh
 $ ./Box86-64_Wine86-64.sh
 
-$ WINEPREFIX=~/.wine_amd64 box86 wine winecfg
+$ WINEPREFIX=/home/user/.wine_amd64 box86 wine winecfg
 </pre><br>
 
 <p>
@@ -71,14 +71,14 @@ DPI設定成144<br>
 <pre>
 $ cd
 $ git clone https://github.com/steward-fu/masm32
-$ cp -a masm32/masm32 ~/.wine_amd64/drive_c/
+$ cp -a masm32/masm32 /home/user/.wine_amd64/drive_c/
 </pre><br>
 
 <p>
 接着測試是否可以正常執行程式
 </p>
 <pre>
-$ WINEPREFIX=~/.wine_amd64 box86 wine ~/.wine_amd64/drive_c/masm32/examples/exampl01/3dframes/3dframes.exe
+$ WINEPREFIX=/home/user/.wine_amd64 box86 wine /home/user/.wine_amd64/drive_c/masm32/examples/exampl01/minimum/minimum.exe
 </pre>
 <p>
 <img src="setup/2.jpg" class="maxSize"><br>
