--- a/program/masm32/hello.htm
+++ b/program/masm32/hello.htm
@@ -51,6 +51,8 @@
 參考資訊：<br>
 1. <a href="https://masm32.com/board/index.php">masm32</a><br><br>
 
+經典的<b>Hello, world!</b>程式框架總是能夠讓人細心品味一款程式語言的美好，司徒就使用一個簡單的Message對話盒來展現<b>Hello, world!</b>框架<br><br>
+
 main.asm
 </p>
 <pre class="brush:asm">
@@ -72,11 +74,23 @@ content db "Hello, world!",0
     .code
 start:
     invoke MessageBox, NULL, offset content, offset caption, MB_OK
-    invoke ExitProcess, NULL
+    invoke ExitProcess, 0
 end start
-</pre><br>
-
+</pre>
 <p>
+<b>Line 1</b>：CPU指令<br>
+<b>Line 2</b>：記憶體類型是flat，calling convention使用stdcall<br>
+<b>Line 3</b>：程式區分大小寫<br>
+<b>Line 5~7</b>：Header檔案<br>
+<b>Line 9~10</b>：Library檔案<br>
+<b>Line 12</b>：初始化的資料區段<br>
+<b>Line 13~14</b>：初始化的Global變數，型態是byte(char)且最後一個byte是0<br>
+<b>Line 16</b>：程式區段<br>
+<b>Line 17</b>：程式進入點<br>
+<b>Line 18</b>：顯示Message對話盒，invoke其實就是call + push的綜合指令<br>
+<b>Line 19</b>：結束Process並且釋放相關資源<br>
+<b>Line 20</b>：檔案結尾，end指令後的程式將不會被編譯<br><br>
+
 Makefile
 </p>
 <pre>
