--- a/program/masm32/setup.htm
+++ b/program/masm32/setup.htm
@@ -51,7 +51,7 @@
 參考資訊：<br>
 1. <a href="https://www.masm32.com/">masm32</a><br><br>
 
-司徒目前是在Pro1 X上撰寫MASM32相關的教學程式，而使用的工具則是box86 + wine，比較特別的是，司徒的手機是安裝Sailfish OS，所以司徒是再安裝LXC(Debian 12 ARM64)，讓MASM32程式跑在這個Container裡面，安裝box64 + wine的步驟如下：
+司徒目前是使用Box86 + Wine當作開發測試環境，Box86可以用來執行Intel x86指令集的程式，Box64則是可以用來執行Intel x64指令集的程式，而Wine則是可以用來跑Windows程式，Wine是Windows API層相容，但不是二進制層相容，意思就是，如果Wine是ARM armhf版本的話，Wine執行的程式就必須是ARM armhf指令集的程式，而如果Wine是Intel x86/x64版本，Wine執行的程式就必須是Intel x86/x64指令集的程式，這也是為何Windows PE程式(Intel x86/x64)可以在Linux PC(Intel x86/x64)下用Wine來執行的原因，而司徒目前是要在手機(ARM aarch64)上開發Windows x86/x64程式，所以才需要使用Box86 + Wine，司徒使用的Wine版本支援Intel x86(wine)/x64(win64)程式，安裝步驟如下：
 </p>
 <pre>
 $ cd
@@ -64,24 +64,24 @@ $ WINEPREFIX=/home/user/.wine_amd64 box86 wine winecfg
 
 <p>
 DPI設定成144<br>
-<img src="setup/1.jpg" class="maxSize"><br><br>
+<img style="border:0px" src="setup/1.jpg" class="maxSize"><br><br>
 
-接着使用司徒已經解開的MASM32檔案
+接着使用司徒已經解開的檔案
 </p>
 <pre>
 $ cd
-$ git clone https://github.com/steward-fu/masm32
-$ cp -a masm32/masm32 /home/user/.wine_amd64/drive_c/
+$ git clone https://github.com/steward-fu/win32
+$ cp -a win32/masm32 /home/user/.wine_amd64/drive_c/
 </pre><br>
 
 <p>
 接着測試是否可以正常執行程式
 </p>
 <pre>
-$ WINEPREFIX=/home/user/.wine_amd64 box86 wine /home/user/.wine_amd64/drive_c/masm32/examples/exampl01/minimum/minimum.exe
+$ WINEPREFIX=/home/user/.wine_amd64 box86 wine /home/user/.wine_amd64/drive_c/masm32/demo.exe
 </pre>
 <p>
-<img src="setup/2.jpg" class="maxSize"><br>
+<img style="border:0px" src="setup/2.jpg" class="maxSize"><br>
 P.S. 所有需要的Share Library(*.so and *.dll)都必須成功載入，否者將無法正確執行Windows PE程式
 </p>
 
