--- a/program/masm32/dlg_window.htm
+++ b/program/masm32/dlg_window.htm
@@ -52,7 +52,7 @@
 1. <a href="http://winapi.freetechsecrets.com/win32/">win32</a><br>
 2. <a href="http://masm32.com/board/index.php?topic=3584.0">masm32</a><br><br>
 
-Windows的視窗可以分成：<b>Dialog</b>、Single Document Interface(<b>SDI</b>)、Multiple Document Interface(<b>MDI</b>)三種類別，相對於SDI、MDI，Dialog類別是比較容易上手學習的一個類別，相當適合初次學習Windows視窗設計的使用者，而Windows視窗程式設計的核心就是圍繞着事件處理(處理Message)，任何的視窗設定或者溝通都是以事件導向為原則，因此，寫出一個簡單的視窗框架，將有助於了解Windows視窗程式的運作<br><br>
+Windows的視窗可以分成：<b>Dialog</b>、Single Document Interface(<b>SDI</b>)、Multiple Document Interface(<b>MDI</b>)三種類別，相較於SDI、MDI這兩類別的程式，Dialog類別是比較容易上手學習的一個類別，相當適合初學者入門學習，而Windows程式設計的精髓就是，學會其中一個類別，其餘類別都可以很容易上手，Windows控制項(如：Button、Edit)也是此類道理，比較需要注意的是，Windows視窗程式設計的核心是圍繞着事件處理(處理Message)，任何的視窗設定或者溝通都是以事件導向為原則，因此，寫出一個簡單的視窗框架，將有助於了解Windows視窗程式的運作<br><br>
 
 main.asm
 </p>
@@ -90,8 +90,7 @@ WinMain proc hInst:DWORD, hPrevInst:DWORD, CmdLine:DWORD, CmdShow:DWORD
     local msg:MSG
 
     invoke CreateWindowEx, WS_EX_LEFT, WC_DIALOG, offset szCaption, 
-        WS_OVERLAPPEDWINDOW or WS_VISIBLE, 0, 0, 300, 300, 
-        NULL, NULL, NULL, NULL
+        WS_OVERLAPPEDWINDOW or WS_VISIBLE, 0, 0, 300, 300, NULL, NULL, NULL, NULL
 
 @@:
     invoke GetMessage, addr msg, NULL, 0, 0
@@ -106,14 +105,16 @@ WinMain endp
 end start
 </pre>
 <p>
-<b>Line 22 ~ 26</b>：程式進入點是start()，因此，需要手動保存Instance和CommandLine內容<br>
-<b>Line 28</b>：呼叫自定義的WinMain()，模擬C語言的WinMain()<br>
-<b>Line 29</b>：呼叫ExitProcess()讓Process退出並且釋放相關資源<br>
-<b>Line 34</b>：在建立Windows視窗時，需要指定對應的Class，如：Edit、Button，除了可以使用系統預設的Class之外，也可以註冊自定義的Class，上面例子使用的WC_DIALOG，就是系統預設定義的Dialog Class，WS_OVERLAPPEDWINDOW代表視窗有標題、最大化、最小化的按鈕，WS_VISIBLE是建立一個可視化的視窗<br>
-<b>Line 39</b>：從Queue提取Message(包含視窗、系統事件)，addr用來計算local變數的位址，offset則是global變數位址<br>
-<b>Line 41</b>：@f(forward)代表會跳到下一個@@位置(Line 44)<br>
-<b>Line 42</b>：分發Message到處理視窗事件的副程式，由於目前的Dialog視窗並沒有對應的處理副程式，因此，無法處理任何Message，包含關閉視窗的Message，所以必須使用kill命令強制關閉該視窗<br>
-<b>Line 43</b>：@b(back)代表會跳到上一個@@位置(Line 38)<br><br>
+<b>Line 21~25</b>：一般習慣是在程式進入時，保存Instance、CommandLine的內容<br>
+<b>Line 27</b>：呼叫自定義的WinMain()，模擬C語言的WinMain()，當然也可以把內容都寫在start()裡面<br>
+<b>Line 29</b>：退出Process並且釋放相關資源<br>
+<b>Line 30~45</b>：proc、endp用來定義Procedure的區間<br>
+<b>Line 33~34</b>：在建立Windows視窗時，需要指定對應的Class，如：Edit、Button，除了可以使用系統預設的Class之外，也可以註冊自定義的Class，上面例子使用的WC_DIALOG，就是系統預設定義的Dialog Class，WS_OVERLAPPEDWINDOW代表視窗有標題、最大化、最小化的按鈕，WS_VISIBLE是建立一個可視化的視窗<br>
+<b>Line 36</b>：暫時性的Label，不需要指定名稱，適合小範圍的應用，但需要搭配@f、@b使用<br>
+<b>Line 37</b>：從Queue提取Message(包含視窗、系統事件)，addr用來計算local變數的位址，offset則是global變數位址<br>
+<b>Line 39</b>：@f(forward)代表會跳到下一個@@位置(Line 42)<br>
+<b>Line 40</b>：分發Message到處理視窗事件的副程式，由於目前的Dialog視窗並沒有對應的處理副程式，因此，無法處理任何Message，包含關閉視窗的Message，所以執行後，必須使用kill命令強制關閉該視窗<br>
+<b>Line 41</b>：@b(back)代表會跳到上一個@@位置(Line 36)<br><br>
 
 Makefile
 </p>
